--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -71,6 +71,55 @@
         </div>
       </mat-card-actions>
     </mat-card>
+    <mat-card class="example-card" *ngFor="let clothing of clothings; let i = index">
+      <mat-card-content>
+        <img class="cover" [src]="clothing.clothing_url" alt="bike">
+        <p>
+          <label for="id">Image Url:</label>
+          <input [(ngModel)]="clothing.clothing_url" type="text" class="form-control" placeholder="Image" aria-label="Image">
+        </p>
+        <p>
+          <label for="id">ID:</label>
+          <input [(ngModel)]="clothing.id" disabled type="text" class="form-control" placeholder="ID" aria-label="ID">
+        </p> 
+        <p>
+          <label for="price">Clothing Type</label>
+          <input [(ngModel)]="clothing.clothing_type" type="text" class="form-control" placeholder="Make" aria-label="price"
+            aria-describedby="basic-addon1">
+        </p>
+        <p>
+          <label for="price">Clothing Color</label>
+          <input [(ngModel)]="clothing.color" type="text" class="form-control" placeholder="Model" aria-label="price"
+            aria-describedby="basic-addon1">
+        </p> 
+        <p>
+          <label for="description">Name:</label>
+          <input [(ngModel)]="clothing.clothing_name" type="text" class="form-control" placeholder="Description" aria-label="desc"
+            aria-describedby="basic-addon1">
+        </p>
+        <p>
+          <label for="price">Price</label>
+          <input [(ngModel)]="car.price" type="text" class="form-control" placeholder="Price" aria-label="price"
+            aria-describedby="basic-addon1">
+        </p>
+        <p>
+          <label for="quantity">Quantity</label>
+          <input [(ngModel)]="clothing.quantity" type="text" class="form-control" placeholder="Price" aria-label="price"
+            aria-describedby="basic-addon1">
+        </p>
+        <p>
+          <label for="Brand">Brand</label>
+          <input [(ngModel)]="clothing.brand" type="text" class="form-control" placeholder="Price" aria-label="price"
+            aria-describedby="basic-addon1">
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <div class="btn-group pull-right">
+          <button mat-raised-button color="primary" class="pull-right" (click)="updateCar(car)">Save</button>
+          <button mat-raised-button color="warn" (click)='removeCar(car, i)' >Delete</button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
   </div>
 </div>
 <router-outlet></router-outlet>
